testdata/baselines/reference/submodule/conformance/jsDeclarationsReexportAliasesEsModuleInterop.errors.txt
cls.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== cls.js (1 errors) ====
    class Foo {}
    module.exports = Foo;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== usage.js (0 errors) ====
    import {default as Fooa} from "./cls";
    
    export const x = new Fooa();
    
    export {default as Foob} from "./cls";
    